@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_ini.c,v 1.125 2004/01/08 08:17:53 andi Exp $ */
+/* $Id: php_ini.c,v 1.126 2004/02/14 12:29:03 derick Exp $ */
 
 /* Check CWD for php.ini */
 #define INI_CHECK_CWD
@@ -512,13 +512,15 @@ int php_init_config()
 			 * Don't need an extra byte for the \0 in this malloc as the last
 			 * element will not get a trailing , which gives us the byte for the \0
 			 */
-			php_ini_scanned_files = (char *) malloc(total_l);
-			*php_ini_scanned_files = '\0';
-			for (element = scanned_ini_list.head; element; element = element->next) {
-				strcat(php_ini_scanned_files, *(char **)element->data);		
-				strcat(php_ini_scanned_files, element->next ? ",\n" : "\n");
-			}	
-			zend_llist_destroy(&scanned_ini_list);
+			if (total_l) {
+				php_ini_scanned_files = (char *) malloc(total_l);
+				*php_ini_scanned_files = '\0';
+				for (element = scanned_ini_list.head; element; element = element->next) {
+					strcat(php_ini_scanned_files, *(char **)element->data);		
+					strcat(php_ini_scanned_files, element->next ? ",\n" : "\n");
+				}	
+				zend_llist_destroy(&scanned_ini_list);
+			}
 		}
 	}
 	return SUCCESS;
